Resolve textarea bug when typing too long

--- a/assets/css/app.sass
+++ b/assets/css/app.sass
@@ -16,6 +16,9 @@ $headings-font-weight: 700
   width: 100%
   padding: 0 15px !important
 
+#textarea
+  max-height: 400px
+
 article
   h1
     font-size: 2.0rem
